# guile-qr-code

./: .gitignore  AUTHORS  COPYING.MIT  ChangeLog  Makefile.am  NEWS  README.org  configure.ac  guix.scm
.github/workflows/: guix.yml
build-aux/am/: Makefile.am
build-aux/m4/: Makefile.am
doc/: Makefile.am  guile-qr-code.texi
examples/: Makefile.am  ascii-art.scm  hello-world.scm
modules/: Makefile.am  qr-code.scm
modules/qr-code/: Makefile.am  encoder.scm
modules/qr-code/core/: Makefile.am  bits.scm  common.scm  reed-solomon.scm
tests/: Makefile.am  qr-code.scm
